feat: enable full novelette audiobook and fix cover art

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.32.0",
     "@supabase/supabase-js": "^2.91.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "stripe": "^20.2.0"
